<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="hevinxx.iinc.habit.presentation.EditHabitViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_habit"
                android:textColor="?attr/textColorOnPrimary"
                android:textSize="@dimen/text_title"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/activity_horizontal_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/Label"
                    android:text="@string/title" />

                <EditText
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:lines="1"
                    android:text="@={vm.title}" />

                <View style="@style/Divider" />

                <TextView
                    style="@style/Label"
                    android:text="@string/color" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/color_selector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:itemCount="4"
                    tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    tools:listitem="@layout/color_button"
                    tools:spanCount="4" />

                <View style="@style/Divider" />


                <TextView
                    style="@style/Label"
                    android:text="@string/days_of_week" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/dow_selector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="7"
                    tools:itemCount="7"
                    tools:listitem="@layout/dow_button" />

                <View style="@style/Divider" />


                <TextView
                    style="@style/Label"
                    android:text="@string/grades" />

                <include
                    android:id="@+id/grade"
                    layout="@layout/drop_down"
                    app:text="@{vm.achievementGrade}" />

                <View style="@style/Divider" />

                <TextView
                    style="@style/Label"
                    android:text="@string/start_date" />

                <include
                    android:id="@+id/start_date"
                    layout="@layout/drop_down"
                    app:text="@{vm.startDate}" />

                <View style="@style/Divider" />

                <TextView
                    style="@style/Label"
                    android:text="@string/end_date" />

                <include
                    android:id="@+id/end_date"
                    layout="@layout/drop_down"
                    app:text="@{vm.endDate}" />

                <View style="@style/Divider" />
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/Fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.editHabit()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_add_black_24dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>